--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,27 +1,47 @@
 {
   "name": "web",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate",
+    "start:prod": "pnpm prisma migrate prod && pnpm start"
   },
   "dependencies": {
-    "next": "12.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "ui": "workspace:*"
+    "@chakra-ui/react": "^2.2.9",
+    "@chakra-ui/theme-tools": "^2.0.10",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@fontsource/inter": "^4.5.12",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.2.1",
+    "@trpc/client": "^9.27.1",
+    "@trpc/next": "^9.27.1",
+    "@trpc/react": "^9.27.1",
+    "@trpc/server": "^9.27.1",
+    "focus-visible": "^5.2.0",
+    "framer-motion": "^7.2.1",
+    "next": "12.2.0",
+    "next-auth": "^4.10.3",
+    "nextjs-cors": "^2.1.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.34.2",
+    "react-icons": "^4.4.0",
+    "react-query": "^3.39.2",
+    "superjson": "^1.9.1",
+    "zod": "^3.18.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "eslint-config-custom": "workspace:*",
-    "eslint": "7.32.0",
-    "next-transpile-modules": "9.0.0",
-    "tsconfig": "workspace:*",
-    "@types/node": "^17.0.12",
-    "@types/react": "17.0.48",
-    "typescript": "^4.5.3"
+    "@types/node": "18.0.0",
+    "@types/react": "18.0.14",
+    "@types/react-dom": "18.0.5",
+    "eslint": "8.18.0",
+    "eslint-config-next": "12.1.6",
+    "prisma": "^4.2.1",
+    "typescript": "4.7.4"
   }
 }
