--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@fontsource/inter": "^4.5.12",
+    "@loccy/client": "workspace:^1.0.0",
     "@loccy/shared": "workspace:*",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
@@ -23,10 +24,13 @@
     "@trpc/next": "^9.27.1",
     "@trpc/react": "^9.27.1",
     "@trpc/server": "^9.27.1",
+    "bcrypt": "^5.0.1",
+    "envsafe": "^2.0.3",
     "focus-visible": "^5.2.0",
     "framer-motion": "^7.2.1",
     "next": "12.2.0",
     "next-auth": "^4.10.3",
+    "next-international": "*",
     "nextjs-cors": "^2.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -37,6 +41,7 @@
     "zod": "^3.18.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.0.0",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
