--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -20,6 +20,6 @@
       "~/*": ["src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "loccy.config.js", "loccy.config.ts"],
   "exclude": ["node_modules"]
 }
