--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -21,9 +21,12 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
+    "@swc/core": "^1.2.245",
+    "@swc/register": "^0.1.10",
     "chalk": "4.1.2",
     "clear": "^0.1.0",
     "commander": "^9.4.0",
+    "esbuild": "^0.15.6",
     "figlet": "^1.5.2",
     "undici": "^5.10.0"
   }
