--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,13 @@ services:
       - "5432:5432"
     volumes:
       - db:/var/lib/postgresql/data
+  redis:
+    image: bitnami/redis:latest
+    restart: always
+    environment:
+      - ALLOW_EMPTY_PASSWORD=yes
+    ports:
+      - "6379:6379"
 volumes:
   db:
     driver: local
