--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -12,7 +12,8 @@
   "author": "Tim Raderschad",
   "license": "ISC",
   "dependencies": {
-    "next": "^12.3.1",
+    "@mdx-js/loader": "^2.1.3",
+    "next": "^12.1.0",
     "nextra": "^1.1.0",
     "nextra-theme-docs": "^1.2.6",
     "react": "^17.0.1",
