--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,10 +20,11 @@
     "@loccy/shared": "workspace:*",
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.2.1",
-    "@trpc/client": "^9.27.1",
-    "@trpc/next": "^9.27.1",
-    "@trpc/react": "^9.27.1",
-    "@trpc/server": "^9.27.1",
+    "@tanstack/react-query": "^4.3.9",
+    "@trpc/client": "10.0.0-proxy-beta.2",
+    "@trpc/next": "10.0.0-proxy-beta.2",
+    "@trpc/react": "10.0.0-proxy-beta.2",
+    "@trpc/server": "10.0.0-proxy-beta.2",
     "bcrypt": "^5.0.1",
     "dayjs": "^1.11.5",
     "envsafe": "^2.0.3",
@@ -39,7 +40,6 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.34.2",
     "react-icons": "^4.4.0",
-    "react-query": "^3.39.2",
     "superjson": "^1.9.1",
     "zod": "^3.18.0"
   },
