--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "changeset": "pnpm build:packages && pnpm changeset && pnpm changeset version",
+    "create:changeset": "pnpm build:packages && pnpm changeset && pnpm changeset version",
     "release": "pnpm publish -r --access public"
   },
   "devDependencies": {
