--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@loccy/cli",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "",
   "main": "dist/index.js",
   "bin": {
     "loccy": "./dist/index.js"
   },
   "scripts": {
-    "build": "tsup src"
+    "build": "tsup src",
+    "watch": "npm run build -- --watch"
   },
   "keywords": [],
   "author": "Tim Raderschad",
@@ -26,8 +27,10 @@
     "chalk": "4.1.2",
     "commander": "^9.4.0",
     "deepmerge-ts": "^4.2.2",
-    "esbuild": "^0.15.6",
-    "inquirer": "^9.1.1",
+    "esbuild": "^0.15.8",
+    "esbuild-register": "^3.4.1",
+    "fast-glob": "^3.2.12",
+    "inquirer": "8",
     "jsum": "2.0.0-alpha.4",
     "undici": "^5.10.0"
   }
