--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -16,6 +16,8 @@
     "next": "12.3.1",
     "nextra": "^1.1.0",
     "nextra-theme-docs": "^1.2.6",
+    "prism-react-renderer": "^1.3.5",
+    "prismjs": "^1.29.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
